--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VUE_APP_PROJECT = "https://github.com/zhongfly/sub-web"
+VUE_APP_PROJECT = "https://github.com/zhengss1/sub-web"
 
 VUE_APP_BOT_LINK = "https://t.me/subconverter_discuss"
 
@@ -7,7 +7,7 @@ VUE_APP_BACKEND_RELEASE = "https://github.com/tindy2013/subconverter/releases"
 VUE_APP_SUBCONVERTER_REMOTE_CONFIG = "https://raw.githubusercontent.com/tindy2013/subconverter/master/base/config/example_external_config.ini"
 
 # API 后端
-VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "https://sub-beta.vercel.app"
+VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "https://sub.zhengss1.ms"
 
 # 短链接后端
 VUE_APP_MYURLS_DEFAULT_BACKEND = "https://suo.yt"
